# serializer version: 1
# name: test_agent_executor
  '{"title": "LangGraphInput", "$ref": "#/definitions/AgentState", "definitions": {"BaseMessage": {"title": "BaseMessage", "description": "Base abstract Message class.\\n\\nMessages are the inputs and outputs of ChatModels.", "type": "object", "properties": {"content": {"title": "Content", "anyOf": [{"type": "string"}, {"type": "array", "items": {"anyOf": [{"type": "string"}, {"type": "object"}]}}]}, "additional_kwargs": {"title": "Additional Kwargs", "type": "object"}, "type": {"title": "Type", "type": "string"}, "name": {"title": "Name", "type": "string"}, "id": {"title": "Id", "type": "string"}}, "required": ["content", "type"]}, "AgentAction": {"title": "AgentAction", "description": "A full description of an action for an ActionAgent to execute.", "type": "object", "properties": {"tool": {"title": "Tool", "type": "string"}, "tool_input": {"title": "Tool Input", "anyOf": [{"type": "string"}, {"type": "object"}]}, "log": {"title": "Log", "type": "string"}, "type": {"title": "Type", "default": "AgentAction", "enum": ["AgentAction"], "type": "string"}}, "required": ["tool", "tool_input", "log"]}, "AgentFinish": {"title": "AgentFinish", "description": "The final return value of an ActionAgent.", "type": "object", "properties": {"return_values": {"title": "Return Values", "type": "object"}, "log": {"title": "Log", "type": "string"}, "type": {"title": "Type", "default": "AgentFinish", "enum": ["AgentFinish"], "type": "string"}}, "required": ["return_values", "log"]}, "AgentState": {"title": "AgentState", "type": "object", "properties": {"input": {"title": "Input", "type": "string"}, "chat_history": {"title": "Chat History", "type": "array", "items": {"$ref": "#/definitions/BaseMessage"}}, "agent_outcome": {"title": "Agent Outcome", "anyOf": [{"$ref": "#/definitions/AgentAction"}, {"$ref": "#/definitions/AgentFinish"}]}, "intermediate_steps": {"title": "Intermediate Steps", "type": "array", "items": {"type": "array", "minItems": 2, "maxItems": 2, "items": [{"$ref": "#/definitions/AgentAction"}, {"type": "string"}]}}, "max_iterations": {"title": "Max Iterations", "type": "integer"}, "iteration_count": {"title": "Iteration Count", "type": "integer"}}, "required": ["input", "chat_history", "agent_outcome", "intermediate_steps", "max_iterations", "iteration_count"]}}}'
# ---
# name: test_agent_executor.1
  '{"title": "LangGraphOutput", "type": "object", "properties": {"input": {"title": "Input", "type": "string"}, "chat_history": {"title": "Chat History", "type": "array", "items": {"$ref": "#/definitions/BaseMessage"}}, "agent_outcome": {"title": "Agent Outcome", "anyOf": [{"$ref": "#/definitions/AgentAction"}, {"$ref": "#/definitions/AgentFinish"}]}, "intermediate_steps": {"title": "Intermediate Steps", "type": "array", "items": {"type": "array", "minItems": 2, "maxItems": 2, "items": [{"$ref": "#/definitions/AgentAction"}, {"type": "string"}]}}, "max_iterations": {"title": "Max Iterations", "type": "integer"}, "iteration_count": {"title": "Iteration Count", "type": "integer"}}, "definitions": {"BaseMessage": {"title": "BaseMessage", "description": "Base abstract Message class.\\n\\nMessages are the inputs and outputs of ChatModels.", "type": "object", "properties": {"content": {"title": "Content", "anyOf": [{"type": "string"}, {"type": "array", "items": {"anyOf": [{"type": "string"}, {"type": "object"}]}}]}, "additional_kwargs": {"title": "Additional Kwargs", "type": "object"}, "type": {"title": "Type", "type": "string"}, "name": {"title": "Name", "type": "string"}, "id": {"title": "Id", "type": "string"}}, "required": ["content", "type"]}, "AgentAction": {"title": "AgentAction", "description": "A full description of an action for an ActionAgent to execute.", "type": "object", "properties": {"tool": {"title": "Tool", "type": "string"}, "tool_input": {"title": "Tool Input", "anyOf": [{"type": "string"}, {"type": "object"}]}, "log": {"title": "Log", "type": "string"}, "type": {"title": "Type", "default": "AgentAction", "enum": ["AgentAction"], "type": "string"}}, "required": ["tool", "tool_input", "log"]}, "AgentFinish": {"title": "AgentFinish", "description": "The final return value of an ActionAgent.", "type": "object", "properties": {"return_values": {"title": "Return Values", "type": "object"}, "log": {"title": "Log", "type": "string"}, "type": {"title": "Type", "default": "AgentFinish", "enum": ["AgentFinish"], "type": "string"}}, "required": ["return_values", "log"]}}}'
# ---
# name: test_agent_executor.2
  '''
  {
    "nodes": [
      {
        "id": "__start__",
        "type": "schema",
        "data": {
          "title": "LangGraphInput",
          "$ref": "#/definitions/AgentState",
          "definitions": {
            "BaseMessage": {
              "title": "BaseMessage",
              "description": "Base abstract Message class.\n\nMessages are the inputs and outputs of ChatModels.",
              "type": "object",
              "properties": {
                "content": {
                  "title": "Content",
                  "anyOf": [
                    {
                      "type": "string"
                    },
                    {
                      "type": "array",
                      "items": {
                        "anyOf": [
                          {
                            "type": "string"
                          },
                          {
                            "type": "object"
                          }
                        ]
                      }
                    }
                  ]
                },
                "additional_kwargs": {
                  "title": "Additional Kwargs",
                  "type": "object"
                },
                "type": {
                  "title": "Type",
                  "type": "string"
                },
                "name": {
                  "title": "Name",
                  "type": "string"
                },
                "id": {
                  "title": "Id",
                  "type": "string"
                }
              },
              "required": [
                "content",
                "type"
              ]
            },
            "AgentAction": {
              "title": "AgentAction",
              "description": "A full description of an action for an ActionAgent to execute.",
              "type": "object",
              "properties": {
                "tool": {
                  "title": "Tool",
                  "type": "string"
                },
                "tool_input": {
                  "title": "Tool Input",
                  "anyOf": [
                    {
                      "type": "string"
                    },
                    {
                      "type": "object"
                    }
                  ]
                },
                "log": {
                  "title": "Log",
                  "type": "string"
                },
                "type": {
                  "title": "Type",
                  "default": "AgentAction",
                  "enum": [
                    "AgentAction"
                  ],
                  "type": "string"
                }
              },
              "required": [
                "tool",
                "tool_input",
                "log"
              ]
            },
            "AgentFinish": {
              "title": "AgentFinish",
              "description": "The final return value of an ActionAgent.",
              "type": "object",
              "properties": {
                "return_values": {
                  "title": "Return Values",
                  "type": "object"
                },
                "log": {
                  "title": "Log",
                  "type": "string"
                },
                "type": {
                  "title": "Type",
                  "default": "AgentFinish",
                  "enum": [
                    "AgentFinish"
                  ],
                  "type": "string"
                }
              },
              "required": [
                "return_values",
                "log"
              ]
            },
            "AgentState": {
              "title": "AgentState",
              "type": "object",
              "properties": {
                "input": {
                  "title": "Input",
                  "type": "string"
                },
                "chat_history": {
                  "title": "Chat History",
                  "type": "array",
                  "items": {
                    "$ref": "#/definitions/BaseMessage"
                  }
                },
                "agent_outcome": {
                  "title": "Agent Outcome",
                  "anyOf": [
                    {
                      "$ref": "#/definitions/AgentAction"
                    },
                    {
                      "$ref": "#/definitions/AgentFinish"
                    }
                  ]
                },
                "intermediate_steps": {
                  "title": "Intermediate Steps",
                  "type": "array",
                  "items": {
                    "type": "array",
                    "minItems": 2,
                    "maxItems": 2,
                    "items": [
                      {
                        "$ref": "#/definitions/AgentAction"
                      },
                      {
                        "type": "string"
                      }
                    ]
                  }
                },
                "max_iterations": {
                  "title": "Max Iterations",
                  "type": "integer"
                },
                "iteration_count": {
                  "title": "Iteration Count",
                  "type": "integer"
                }
              },
              "required": [
                "input",
                "chat_history",
                "agent_outcome",
                "intermediate_steps",
                "max_iterations",
                "iteration_count"
              ]
            }
          }
        }
      },
      {
        "id": "__end__",
        "type": "schema",
        "data": {
          "title": "LangGraphOutput",
          "type": "object",
          "properties": {
            "input": {
              "title": "Input",
              "type": "string"
            },
            "chat_history": {
              "title": "Chat History",
              "type": "array",
              "items": {
                "$ref": "#/definitions/BaseMessage"
              }
            },
            "agent_outcome": {
              "title": "Agent Outcome",
              "anyOf": [
                {
                  "$ref": "#/definitions/AgentAction"
                },
                {
                  "$ref": "#/definitions/AgentFinish"
                }
              ]
            },
            "intermediate_steps": {
              "title": "Intermediate Steps",
              "type": "array",
              "items": {
                "type": "array",
                "minItems": 2,
                "maxItems": 2,
                "items": [
                  {
                    "$ref": "#/definitions/AgentAction"
                  },
                  {
                    "type": "string"
                  }
                ]
              }
            },
            "max_iterations": {
              "title": "Max Iterations",
              "type": "integer"
            },
            "iteration_count": {
              "title": "Iteration Count",
              "type": "integer"
            }
          },
          "definitions": {
            "BaseMessage": {
              "title": "BaseMessage",
              "description": "Base abstract Message class.\n\nMessages are the inputs and outputs of ChatModels.",
              "type": "object",
              "properties": {
                "content": {
                  "title": "Content",
                  "anyOf": [
                    {
                      "type": "string"
                    },
                    {
                      "type": "array",
                      "items": {
                        "anyOf": [
                          {
                            "type": "string"
                          },
                          {
                            "type": "object"
                          }
                        ]
                      }
                    }
                  ]
                },
                "additional_kwargs": {
                  "title": "Additional Kwargs",
                  "type": "object"
                },
                "type": {
                  "title": "Type",
                  "type": "string"
                },
                "name": {
                  "title": "Name",
                  "type": "string"
                },
                "id": {
                  "title": "Id",
                  "type": "string"
                }
              },
              "required": [
                "content",
                "type"
              ]
            },
            "AgentAction": {
              "title": "AgentAction",
              "description": "A full description of an action for an ActionAgent to execute.",
              "type": "object",
              "properties": {
                "tool": {
                  "title": "Tool",
                  "type": "string"
                },
                "tool_input": {
                  "title": "Tool Input",
                  "anyOf": [
                    {
                      "type": "string"
                    },
                    {
                      "type": "object"
                    }
                  ]
                },
                "log": {
                  "title": "Log",
                  "type": "string"
                },
                "type": {
                  "title": "Type",
                  "default": "AgentAction",
                  "enum": [
                    "AgentAction"
                  ],
                  "type": "string"
                }
              },
              "required": [
                "tool",
                "tool_input",
                "log"
              ]
            },
            "AgentFinish": {
              "title": "AgentFinish",
              "description": "The final return value of an ActionAgent.",
              "type": "object",
              "properties": {
                "return_values": {
                  "title": "Return Values",
                  "type": "object"
                },
                "log": {
                  "title": "Log",
                  "type": "string"
                },
                "type": {
                  "title": "Type",
                  "default": "AgentFinish",
                  "enum": [
                    "AgentFinish"
                  ],
                  "type": "string"
                }
              },
              "required": [
                "return_values",
                "log"
              ]
            }
          }
        }
      },
      {
        "id": "agent",
        "type": "runnable",
        "data": {
          "id": [
            "langchain_core",
            "runnables",
            "base",
            "RunnableLambda"
          ],
          "name": "run_agent"
        }
      },
      {
        "id": "action",
        "type": "runnable",
        "data": {
          "id": [
            "langchain_core",
            "runnables",
            "base",
            "RunnableLambda"
          ],
          "name": "execute_tools"
        }
      },
      {
        "id": "abort",
        "type": "runnable",
        "data": {
          "id": [
            "langchain_core",
            "runnables",
            "base",
            "RunnableLambda"
          ],
          "name": "abort"
        }
      },
      {
        "id": "agent_should_continue",
        "type": "unknown",
        "data": "agent_should_continue"
      }
    ],
    "edges": [
      {
        "source": "__start__",
        "target": "agent"
      },
      {
        "source": "abort",
        "target": "__end__"
      },
      {
        "source": "action",
        "target": "agent"
      },
      {
        "source": "agent",
        "target": "agent_should_continue"
      },
      {
        "source": "agent_should_continue",
        "target": "action",
        "data": "continue"
      },
      {
        "source": "agent_should_continue",
        "target": "abort",
        "data": "abort"
      },
      {
        "source": "agent_should_continue",
        "target": "__end__",
        "data": "end"
      }
    ]
  }
  '''
# ---
# name: test_agent_executor.3
  '''
                       +-----------+                    
                       | __start__ |                    
                       +-----------+                    
                              *                         
                              *                         
                              *                         
                         +-------+                      
                         | agent |*                     
                        *+-------+ ***                  
                      **              ****              
                    **                    ***           
                  **                         ***        
    +-----------------------+                   **      
    | agent_should_continue |                    *      
    +-----------------------+*                   *      
           *         **       ******             *      
         **            *            ******       *      
        *               **                ***    *      
  +-------+               *                 +--------+  
  | abort |             **                  | action |  
  +-------+            *                    +--------+  
           *         **                                 
            **     **                                   
              *   *                                     
          +---------+                                   
          | __end__ |                                   
          +---------+                                   
  '''
# ---
